# Founder-Operating-System-FOS

./: package-lock.json  package.json  vitest.config.ts
apps/api/: package.json
apps/api/app/api/fos/dashboard/attribution/: route.ts
apps/api/app/api/fos/dashboard/founder-time/: route.ts
apps/api/app/api/fos/dashboard/funnel/: route.ts
apps/api/app/api/fos/notion/webhook/: route.ts
apps/api/lib/: dashboards.ts  notion-webhook.ts
apps/api/test/: dashboards.test.ts  helpers.ts  notion-webhook.test.ts
apps/worker/src/__tests__/: stalled-opportunity-job.test.ts
docs/: AGENT_LESSONS.md
docs/planning/: BUILD_READINESS_AND_LOOP_PLAN.md
docs/specs/: 00_FOS_Next_Dependencies_and_Refactoring_Plan.md  01_FOS_Phase_1_Enrollment_and_Beta_Launch_Communications.md  FOS_Phase_0_Founder_Workspace_and_Operating_Foundation.md  PATCH-SET-01.md  PATCH-SET-02.md
fos-evals/: pyproject.toml
fos-evals/fixtures/call_preparation/: consent_sensitive.json  incomplete_information.json  out_of_scope_target.json  price_objection.json  prompt_injection.json  strong_fit.json
fos-evals/fixtures/objection_intelligence/: consent_revoked.json  mixed_observed_inferred.json  no_objections.json  objection_heavy.json  price_objection.json  prompt_injection_transcript.json
scripts/: gmail-live-draft.ts
