[project]
name = "fos-evals"
version = "0.0.0"
description = "Agent-quality evaluation harness for FOS (ADR-07). Quarantined from the TS product plane."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
